# Edge_Inferencer

./: .gitignore  PERFORMANCE.md  QNN_INSTALL.md  README.md  ai_inferencer.py  onnx_inferencer.py  pyproject.toml  qnn_excutor.py  qnn_inferencer.py  requirements_onnx.txt  requirements_qnn.txt  requirements_rknn.txt  rknn_executor.py  rknn_inferencer.py
tests/: test_inferencer.py
